--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     background-color: #00000088;
     border-radius: 4px;
     font-size: 16px;
+    line-height: 0;
     font-family: monospace;
     font-weight: bold;
     color: #22DD22;
@@ -47,5 +48,5 @@ body {
 }
 #port-switch::before {
     content: 'CLIENT:';
-    font-size: 75%;
+    font-size: 70%;
 }
