--- a/index/style.css
+++ b/index/style.css
@@ -51,3 +51,9 @@ body {
     content: 'CLIENT:';
     font-size: 70%;
 }
+
+@media (min-width: 802px), (min-height: 482px) {
+    body {
+        background-color: #880000;
+    }
+}
