--- a/index/style.css
+++ b/index/style.css
@@ -10,7 +10,7 @@ body {
 #game-container {
     position: relative;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
